my-day-app: Plugin para el social sharing facebook

--- a/my-promises/www/index.html
+++ b/my-promises/www/index.html
@@ -64,7 +64,7 @@
     <script src="app/components/promise/promiseController.js"></script>
 <!--Services-->
     <script src="app/shared/data/factory.js"></script>
-    <script src="app/shared/social/socialSharingService.js"></script>
+    <script src="bower_components/ngCordova/dist/ng-cordova.min.js"></script>
     <!-- Styles -->
     <link rel="stylesheet" href="components/loader.css">
     <link rel="stylesheet" href="lib/onsenui/css/onsenui.css" type="text/css" media="all" />
